--- a/journal-database/src/main/resources/application.properties
+++ b/journal-database/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL91Dialect
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.current_session_context_class=org.hibernate.context.internal.ThreadLocalSessionContext
 // a hack needed to solve java.sql.SQLFeatureNotSupportedException
