--- a/journal-database/src/main/resources/application.properties
+++ b/journal-database/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL91Dialect
 # general settings
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.hbm2ddl.auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.current_session_context_class=org.hibernate.context.internal.ThreadLocalSessionContext
 // a hack needed to solve java.sql.SQLFeatureNotSupportedException
